--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# Entorno virtual de Python
+
+### 2. Archivo `.gitignore`
+
+# Entornos virtuales
 venv/
-
-# Archivos del sistema macOS
-.DS_Store
-
-# Archivo .env con las API KEYS.
+env/
 .env
+
+# Archivos de Jupyter
+.ipynb_checkpoints/
+
+# Archivos compilados de Python y MAC
+__pycache__/
+*.py[cod]
+.DS_store
