--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ langchain-classic==1.0.1
 langchain-community==0.4.1
 langchain-core==1.2.7
 langchain-google-genai==4.1.3
+langchain-google-vertexai
 langchain-text-splitters==1.1.0
 langgraph==1.0.5
 langgraph-checkpoint==3.0.1
@@ -54,6 +55,7 @@ langgraph-sdk==0.3.2
 langsmith==0.6.2
 marshmallow==3.26.2
 matplotlib-inline==0.2.1
+matplotlib
 mcp==1.25.0
 multidict==6.7.0
 mypy_extensions==1.1.0
